fix: day graid overflow
fixes #12

--- a/src/calendar-widget/widget.css
+++ b/src/calendar-widget/widget.css
@@ -31,3 +31,8 @@
 .fc-event {
   cursor: pointer;
 }
+
+.fc-daygrid-event > div {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
